[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "punchline_p2p"
version = "0.0.2"
description = "A peer-to-peer communication library"
readme = "README.md"
# license = {file = "LICENSE"}
license = "MIT"  # Or use an SPDX-compliant license string
license-files = ["LICENSE"]
authors = [
    # {name = "redacted", email = "redacted@redacted"}
    {name = "s-aluma-r"}
]
keywords = ["peer-to-peer", "communication"]
requires-python = ">=3.8"

dependencies = [
    "requests==2.32.3",
    "setuptools==58.1.0"
]

[project.urls]
homepage = "https://github.com/s-aluma-r/punchline-p2p"

# Optional dependencies for running your own server
[project.optional-dependencies]
server = ["pandas==2.2.3"]
tools = ["pandas==2.2.3"]

# Optional: Specify entry points for executable scripts
[project.scripts]
punchline_file_transfer = "punchline_p2p.tools.file_transfer:main"
run_punchline_server = "punchline_p2p.tools.server:main"

# Optional: Metadata for package distribution
[tool.setuptools]
packages = ["setuptools.find_packages"]  # Specify your package directory

# Optional: Additional setuptools configurations
# [tool.setuptools.package-data]
# "punchline_p2p" = ["active_servers.json"]  # Include non-code files

[tool.setuptools.exclude-package-data]
"tests" = ["*.pyc"]  # Exclude compiled files
